# ParaPolyJam

./: .gitignore  CMakeLists.txt  README.md
cmake/: PolyjamVendoredTBB.cmake
polyjam_generator/: CMakeLists.txt
polyjam_generator/include/polyjam/generator/: ParallelPruning.hpp
polyjam_generator/include/polyjam/math/: GaussJordan.hpp
polyjam_generator/src/: polyjam.cpp
polyjam_generator/src/generator/: ParallelPruning.cpp  methods.cpp
polyjam_solvers/: test_stats.hpp
polyjam_solvers/gen3pt/: CMakeLists.txt
polyjam_solvers/gxy_monomial/: CMakeLists.txt  README.md  gxy_monomial.cpp  gxy_monomial.hpp  test_gxy_monomial.cpp
polyjam_solvers/gxy_monomial_core/: gxy_monomial_core.cpp  gxy_monomial_core.hpp
polyjam_solvers/handeye_axxb/: CMakeLists.txt  README.md  handeye_axxb.cpp  handeye_axxb.hpp  test_handeye_axxb.cpp
polyjam_solvers/handeye_axxb_q/: handeye_axxb_q.cpp  handeye_axxb_q.hpp
polyjam_solvers/opnp/: CMakeLists.txt
polyjam_solvers/sw6pt/: CMakeLists.txt
polyjam_solvers/wu_q_lambda/: CMakeLists.txt  README.md  test_wu_q_lambda.cpp  wu_q_lambda.cpp  wu_q_lambda.hpp
polyjam_solvers/wu_q_lambda0/: CMakeLists.txt  README.md  test_wu_q_lambda0.cpp  wu_q_lambda0.cpp  wu_q_lambda0.hpp
polyjam_solvers/wu_q_lambda0_core/: wu_q_lambda0_core.cpp  wu_q_lambda0_core.hpp
polyjam_solvers/wu_q_lambda_core/: wu_q_lambda_core.cpp  wu_q_lambda_core.hpp
polyjam_workspace/: CMakeLists_template.txt
polyjam_workspace/gxy_monomial/: gxy_monomial.cpp
polyjam_workspace/gxy_monomial_core/M2script/: gxy_monomial_core.m2
polyjam_workspace/handeye_axxb/: handeye_axxb.cpp
polyjam_workspace/handeye_axxb_q/M2script/: handeye_axxb_q.m2
polyjam_workspace/wu_q_lambda/: wu_q_lambda.cpp
polyjam_workspace/wu_q_lambda0/: wu_q_lambda0.cpp
polyjam_workspace/wu_q_lambda0_core/M2script/: wu_q_lambda0_core.m2
polyjam_workspace/wu_q_lambda_core/M2script/: wu_q_lambda_core.m2
